fix icon placement on smaller screen

--- a/src/application/views/assets/css/App.css
+++ b/src/application/views/assets/css/App.css
@@ -49,7 +49,7 @@ html, body {
     margin-bottom: 30px;
 }
 
-#forgot-password {
+.space-on-left {
     margin-left: 20px;
 }
 
@@ -64,10 +64,6 @@ html, body {
     padding-top: 250px;
 }
 
-.space {
-    margin-right:10px;
-}
-
 .welcomeH1 {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
@@ -76,12 +72,6 @@ html, body {
     font-weight: 900;
     -webkit-text-stroke: 1px #007bff;
     color: rgb(255, 255, 255);
-}
-
-@media only screen and (max-width: 767px) {
-    .min-padding {
-        padding: 10px;
-    }
 }
 
 .vehicleCards {
@@ -97,5 +87,12 @@ html, body {
 
 .searchComponentIcons {
     color: #007bff;
-    margin-right: 10px;
+    margin: 0px 10px;
+    margin-top: 10px;
+}
+
+@media only screen and (max-width: 767px) {
+    .min-padding {
+        padding: 10px;
+    }
 }
